syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.keepreal.madagascar.tenrecs";

import "common.proto";

enum NotificationEventType {
    NOTIFICATION_EVENT_NONE = 0;
    NOTIFICATION_EVENT_NEW_SUBSCRIBE = 1;
    NOTIFICATION_EVENT_NEW_COMMENT = 2;
    NOTIFICATION_EVENT_NEW_REACTION = 3;
    NOTIFICATION_EVENT_NEW_MEMBER = 4;
    NOTIFICATION_EVENT_NEW_UNSUBSCRIBE = 5;
}

message SubscribeEvent {
    string islandId = 1;
    string subscriberId = 2;
}

message UnsubscribeEvent {
    string islandId = 1;
    string subscriberId = 2;
}

message MemberEvent {
    string islandId = 1;
    string memberId = 2;
    string membershipId = 3;
    string membershipName = 4;
    uint64 priceInCents = 5;
    int32 timeInMonths = 6;
}

message CommentEvent {
    CommentMessage comment = 1;
    FeedMessage feed = 2;
}

message ReactionEvent {
    ReactionMessage reaction = 1;
    FeedMessage feed = 2;
}

message NotificationEvent {
    NotificationEventType type = 1;
    string userId = 2;
    oneof event {
        SubscribeEvent subscribeEvent = 3;
        UnsubscribeEvent unsubscribeEvent = 4;
        CommentEvent commentEvent = 5;
        ReactionEvent reactionEvent = 6;
        MemberEvent memberEvent = 7;
    }
    uint64 timestamp = 8;
    string eventId = 9;
}